egress-external-https-proxy-integration/service-mesh/http-proxy/gateway-tls-passthrough/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: tcp
      protocol: TCP
    hosts:
    - external-app.corp.net
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - external-app.corp.net
    tls:
      mode: PASSTHROUGH
