egress-external-https-proxy-integration/service-mesh/http-proxy/gateway-tls-passthrough/destination-rule-443.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tunnel-via-external-forward-proxy
spec:
  host: external-forward-proxy.corp.net
  trafficPolicy:
    tunneling:
      destinationPort: 443
