egress-external-https-proxy-integration/service-mesh/http-proxy/gateway-tls-passthrough/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tunnel-via-external-forward-proxy
spec:
  host: external-forward-proxy.corp.net
  subsets:
  - name: external-app-443
    trafficPolicy:
      tunneling:
        destinationPort: 443
  - name: external-app-8443
    trafficPolicy:
      tunneling:
        destinationPort: 8443
